# eWindow

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  todo.md
libBuild/hdr/: defines.hpp  ewin.hpp  imageload.hpp  inputhandle.hpp  window.hpp  winput.hpp  wsettings.hpp
libBuild/include/easywindow/: contextsettings.hpp  ewin.hpp  inputhandle.hpp  window.hpp  winput.hpp  wsettings.hpp
libBuild/src/: ewin.cpp  imageload.cpp  inputhandle.cpp  window.cpp  winput.cpp
